<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.DetailsFragment">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:theme="@style/Theme.MindFiChallenge.ToolbarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ProgressBar
        android:id="@+id/pb_loading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:indeterminate="true"
        android:indeterminateTint="@color/color_primary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar" />

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nsv_content"
        android:layout_width="match_parent"
        android:layout_height="@dimen/zero_dp"
        app:layout_constraintTop_toBottomOf="@id/toolbar">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clipToPadding="false"
            android:paddingBottom="@dimen/sv_margin_bottom">

            <ImageView
                android:id="@+id/ivMentor"
                android:layout_width="@dimen/profile_pic_size"
                android:layout_height="@dimen/profile_pic_size"
                android:layout_marginTop="@dimen/iv_mentor_margin_top"
                android:contentDescription="@string/profile_picture"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tvName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/tv_name_margin_top"
                android:fontFamily="@font/archivonarrow_bold"
                android:textColor="@android:color/black"
                android:textSize="@dimen/tv_name_text_size"
                app:layout_constraintEnd_toEndOf="@id/ivMentor"
                app:layout_constraintStart_toStartOf="@id/ivMentor"
                app:layout_constraintTop_toBottomOf="@id/ivMentor"
                tools:text="Toby Sterrett" />

            <TextView
                android:id="@+id/tvLogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="@id/tvName"
                app:layout_constraintStart_toStartOf="@id/tvName"
                app:layout_constraintTop_toBottomOf="@id/tvName"
                tools:text="\@takeo" />

            <TextView
                android:id="@+id/tvCompany"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/tv_company_margin_top"
                android:drawablePadding="@dimen/tv_company_drawable_padding"
                android:fontFamily="@font/archivonarrow"
                android:gravity="center"
                android:textColor="@android:color/black"
                app:drawableLeftCompat="@drawable/ic_work"
                app:drawableTint="@color/color_primary"
                app:layout_constraintEnd_toStartOf="@id/tvLocation"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvLogin"
                tools:text="\@zendesk" />

            <TextView
                android:id="@+id/tvLocation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/tv_location_margin_top"
                android:drawablePadding="@dimen/tv_location_drawable_padding"
                android:fontFamily="@font/archivonarrow"
                android:gravity="center"
                android:textColor="@android:color/black"
                app:drawableLeftCompat="@drawable/ic_location"
                app:drawableTint="@color/color_primary"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/tvCompany"
                app:layout_constraintTop_toBottomOf="@id/tvLogin"
                tools:text="\Portland, OR" />

            <TextView
                android:id="@+id/tvFollowersLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/tv_followers_label_margin_start"
                android:layout_marginTop="@dimen/tv_followers_label_margin_top"
                android:text="@string/followers"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/tvFollowingLabel"
                app:layout_constraintTop_toBottomOf="@id/barrier" />

            <TextView
                android:id="@+id/tvFollowers"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/archivonarrow_bold"
                android:textColor="@android:color/black"
                android:textSize="@dimen/tv_followers_text_size"
                app:layout_constraintEnd_toEndOf="@id/tvFollowersLabel"
                app:layout_constraintStart_toStartOf="@id/tvFollowersLabel"
                app:layout_constraintTop_toBottomOf="@id/tvFollowersLabel"
                tools:text="76" />


            <TextView
                android:id="@+id/tvFollowingLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/tv_following_label_margin_top"
                android:layout_marginEnd="@dimen/tv_following_label_margin_end"
                android:text="@string/following"
                app:layout_constraintEnd_toStartOf="@+id/tvFollowersLabel"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintHorizontal_chainStyle="packed"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/barrier" />

            <TextView
                android:id="@+id/tvFollowing"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/archivonarrow_bold"
                android:textColor="@android:color/black"
                android:textSize="@dimen/tv_following_text_size"
                app:layout_constraintEnd_toEndOf="@id/tvFollowingLabel"
                app:layout_constraintStart_toStartOf="@id/tvFollowingLabel"
                app:layout_constraintTop_toBottomOf="@id/tvFollowingLabel"
                tools:text="11" />

            <ImageButton
                android:id="@+id/btnPrev"
                android:layout_width="@dimen/btn_prev_size"
                android:layout_height="@dimen/btn_prev_size"
                android:background="?attr/actionBarItemBackground"
                android:contentDescription="@string/previous_date_button"
                android:src="@drawable/ic_prev"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/btnNext" />


            <ImageButton
                android:id="@+id/btnNext"
                android:layout_width="@dimen/btn_next_size"
                android:layout_height="@dimen/btn_next_size"
                android:layout_marginTop="@dimen/btn_next_margin_top"
                android:background="?attr/actionBarItemBackground"
                android:contentDescription="@string/next_date_button"
                android:src="@drawable/ic_next"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvFollowers" />

            <TextView
                android:id="@+id/tvDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/archivonarrow_bold"
                android:textColor="@android:color/black"
                android:textSize="@dimen/tv_date_text_size"
                app:layout_constraintBottom_toBottomOf="@id/btnNext"
                app:layout_constraintEnd_toStartOf="@id/btnNext"
                app:layout_constraintStart_toEndOf="@id/btnPrev"
                app:layout_constraintTop_toTopOf="@id/btnNext"
                tools:text="March 5, 2022" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvTimeSlots"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clipToPadding="false"
                android:paddingHorizontal="@dimen/rv_time_slots_padding_h"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/btnNext" />

            <androidx.constraintlayout.widget.Barrier
                android:id="@+id/barrier"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:barrierDirection="bottom"
                app:constraint_referenced_ids="tvCompany,tvLocation" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clipToPadding="false"
        android:paddingHorizontal="16dp"
        android:paddingVertical="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/btnBook"
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:enabled="false"
            android:fontFamily="@font/archivonarrow"
            android:text="@string/book"
            android:textSize="18sp" />

    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>